--- a/test/fixtures/foods.yml
+++ b/test/fixtures/foods.yml
@@ -1,4 +1,22 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: foods
+#
+#  id          :bigint           not null, primary key
+#  description :text
+#  location    :string           not null
+#  name        :string           not null
+#  number      :integer          not null
+#  purchase    :date             not null
+#  unit        :string           not null
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#  user_id     :bigint           not null
+#
+# Indexes
+#
+#  index_foods_on_user_id  (user_id)
+#
 
 one:
   name: MyString
